--- a/mypreamble.tex
+++ b/mypreamble.tex
@@ -10,7 +10,7 @@
 \usepackage{multirow,multicol}
 %\usepackage{tabularx}
 %\usepackage{booktabs}
-%\usepackage{colortbl}
+\usepackage{colortbl}
 \usepackage{algorithm,algpseudocode}
 %\usepackage{etex}
 \usepackage{fancyvrb,listings}
