--- a/mypreamble.tex
+++ b/mypreamble.tex
@@ -82,7 +82,7 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
   xleftmargin=\parindent,
   language=C,
   showstringspaces=false,
-  basicstyle=\scriptsize\ttfamily,
+  basicstyle=\footnotesize\ttfamily,
   keywordstyle=\bfseries\color{green!40!black},
   commentstyle=\upshape\color{red!90!white},
   identifierstyle=\color{blue},
