Added section on control flow

--- a/mypreamble.tex
+++ b/mypreamble.tex
@@ -16,7 +16,7 @@
 \usepackage{fancyvrb,listings}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{grey}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82} 
 \lstset{%
 language=bash,                % the language of the code
@@ -67,7 +67,7 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
 \lstdefinestyle{LINUX}
 {
 %    backgroundcolor=\color{black},
-%    basicstyle=\tiny\ttfamily,
+    basicstyle=\tiny\ttfamily,
 %    keywordsstyle=\color{blue},
 %    morekeywords={Tutorials,BASH,scripts},
 %    literate={>}{{\textcolor{blue}{>}}}1
