--- a/CProg1.tex
+++ b/CProg1.tex
@@ -144,7 +144,7 @@ Hello World!
     \item Each individual statement must end with a semicolon. 
     \item Whitespace i.e. tabs or spaces is insignificant except whitespace within a character string.
     \item All C statments are free format i.e. no specified layout or column assignment as in FORTRAN77.
-      \begin{lstlisting}
+      \begin{lstlisting}[basicstyle=\scriptsize\ttfamily]
 #include <stdio.h>
 int main () {  /* My First C Code */  printf("Hello World!\n");  return 0;}
       \end{lstlisting}
@@ -162,31 +162,31 @@ multiline comment */
 \end{frame}
 
 \begin{frame}[fragile]{Valid Character Set in C language}
-  \begin{itemize}
-    \item White space Characters: blank space, new line, horizontal tab, carriage return and form feed
-  \end{itemize}
   \begin{center}
-    \begin{tabular}{|a|b|}
-      \hline
+    \vspace{-0.5cm}
+    \begin{tabular}{ab}
+%      \hline
       {Alphabets} & ABCDEFGHIJKLMNOPQRSTUVWXYZ \\
       & abcdefghijklmnopqrstuvwxyz \\
       Digits                     & 0123456789 \\
-      \hline
+%      \hline
     \end{tabular}
+    \vspace{0.25cm}
     \newline
     \begin{tabular}{abababababababa}
-      \hline
-      \multicolumn{15}{a}{Special Characters} \\
-      \hline
+%      \hline
+      \rowcolor{lublue}\multicolumn{15}{a}{Special Characters} \\
+%      \hline
       , & \_ & \{ & < & ' & ( & \Verb|^| & ; & \$ & / & *                & + & [ & \Verb|#| & ? \\ 
       . & \& & \} & > & " & ) & \Verb|!| & : & \% & | & \textbackslash{} & - & ] & \Verb|~| & \\
-      \hline
+%      \hline
     \end{tabular}
+    \vspace{0.25cm}
     \newline
-    \begin{tabular}{|c|c|c|c|}
-      \hline
-      \multicolumn{4}{a}{Reserved Keywords}\\
-      \hline
+    \begin{tabular}{cccc}
+%      \hline
+      \rowcolor{lublue}\multicolumn{4}{a}{Reserved Keywords}\\
+%      \hline
       \rowcolor{lulime!60} auto     & double & int      & struct \\
       \rowcolor{lulime}    break    & else   & long     & switch \\
       \rowcolor{lulime!60} case     & enum   & register & typedef \\
@@ -195,9 +195,12 @@ multiline comment */
       \rowcolor{lulime}    do       & if     & static   & while \\
       \rowcolor{lulime!60} default  & goto   & sizeof   & volatile \\
       \rowcolor{lulime}    const    & float  & short    & unsigned \\
-      \hline
+%      \hline
     \end{tabular}
   \end{center}
+  \begin{itemize}
+    \item White space Characters: blank space, new line, horizontal tab, carriage return and form feed
+  \end{itemize}
 \end{frame}
 
 \section{Data Types, Variables and Constants}
@@ -228,24 +231,24 @@ multiline comment */
 
 \begin{frame}[fragile]{Basic Data Types: Integer}
   \begin{center}
-    \begin{tabular}{|c|c|c|}
-      \hline
-      Type & Storage size (in bytes) & Value range \\
-      \hline
-      char            & 1      & -128 to 127 or 0 to 255 \\
-      unsigned char   & 1      & 0 to 255 \\
-      signed char     & 1      & -128 to 127 \\
-      \hline
-      \multirow{3}{*}{int} & 2 & -32,768 to 32,767 \\ & or & or \\ & 4 &  -2,147,483,648 to 2,147,483,647 \\
-      \hline
-      \multirow{3}{*}{unsigned int} & 2 & 0 to 65,535 \\ & or & or  \\ & 4 & 0 to 4,294,967,295 \\
-      \hline
-      short           & 2      & -32,768 to 32,767 \\
-      unsigned short  & 2      & 0 to 65,535 \\ 
-      \hline
-      long            & 4      & -2,147,483,648 to 2,147,483,647 \\
-      unsigned long   & 4      & 0 to 4,294,967,295 \\
-      \hline
+    \begin{tabular}{ccc}
+%      \hline
+      \rowcolor{lublue}Type & Storage size (in bytes) & Value range \\
+%      \hline
+      \rowcolor{lulime}char            & 1      & -128 to 127 or 0 to 255 \\
+      \rowcolor{lulime}unsigned char   & 1      & 0 to 255 \\
+      \rowcolor{lulime}signed char     & 1      & -128 to 127 \\
+%      \hline
+      \rowcolor{lulime!60}\multirow{3}{*}{int} & 2 & -32,768 to 32,767 \\ \rowcolor{lulime!60}int & or & or \\ \rowcolor{lulime!60}& 4 &  -2,147,483,648 to 2,147,483,647 \\
+%      \hline
+      \rowcolor{lulime}\multirow{3}{*}{unsigned int} & 2 & 0 to 65,535 \\ \rowcolor{lulime}unsigned int& or & or  \\ \rowcolor{lulime}& 4 & 0 to 4,294,967,295 \\
+%      \hline
+      \rowcolor{lulime!60}short           & 2      & -32,768 to 32,767 \\
+      \rowcolor{lulime!60}unsigned short  & 2      & 0 to 65,535 \\ 
+%      \hline
+      \rowcolor{lulime}long            & 4      & -2,147,483,648 to 2,147,483,647 \\
+      \rowcolor{lulime}unsigned long   & 4      & 0 to 4,294,967,295 \\
+%      \hline
     \end{tabular}
   \end{center}
   \begin{itemize}
@@ -256,26 +259,26 @@ multiline comment */
 
 \begin{frame}{Basic Data Types: Floating-Point \& void}
   \begin{center}
-    \begin{tabular}{|c|c|c|c|}
-      \hline
-      Type & Storage size & Value range & Precision (decimal places) \\
-      \hline
+    \begin{tabular}{abab}
+%      \hline
+      \rowcolor{lublue}Type & Storage size & Value range & Precision (decimal places) \\
+%      \hline
       float       & 4 bytes  & 1.2E-38 to 3.4E38     & 6 \\
       double      & 8 bytes  & 2.3E-308 to 1.7E308   & 15 \\
       long double & 10 bytes & 3.4E-4932 to 1.1E4932 & 19 \\
-      \hline
+%      \hline
     \end{tabular}
   \end{center}
 
   \begin{center}
-    \begin{tabular}{|c|c|}
-      \hline
-      Situation & Description \\
-      \hline
+    \begin{tabular}{ab}
+%      \hline
+      \rowcolor{lublue}Situation & Description \\
+%      \hline
       function returns as void & function with no return value \\
       function arguments as void & function with no parameter \\
       pointers to void & address of an object without type \\
-      \hline
+%      \hline
     \end{tabular}
   \end{center}
 \end{frame}
@@ -389,26 +392,26 @@ char x = 'x';               // the variable x has the value 'x'.
     \item C or any programming language in general needs to be interactive i.e. write something back and optionally read data to be useful.
     \item Similar to Unix, C treats all devices as files.
       \begin{center}
-        \begin{tabular}{ccc}
-          \hline
-          Standard File & File Pointer & Device \\
-          \hline
+        \begin{tabular}{abb}
+%          \hline
+          \rowcolor{lublue}Standard File & File Pointer & Device \\
+%          \hline
           Standard Input & stdin & Keyboard \\
           Standard Output & stdout & Screen \\
           Standard Error & stderr & Screen\\
-          \hline
+%          \hline
         \end{tabular}
       \end{center}
       
     \item C Programming language provides three functions to read/write from standard input/output
       \begin{center}
-        \begin{tabular}{|c|c|c|c|}
-          \hline
-          & \multicolumn{2}{c|}{Unformatted} & Formatted \\
-          \hline
-          Input & getchar & gets & scanf \\
-          Output & putchar & puts & printf \\
-          \hline
+        \begin{tabular}{cccc}
+%          \hline
+          \rowcolor{lublue}& \multicolumn{2}{c}{Unformatted} & Formatted \\
+%          \hline
+          \rowcolor{lulime}Input & getchar & gets & scanf \\
+          \rowcolor{lulime!60}Output & putchar & puts & printf \\
+%          \hline
         \end{tabular}
       \end{center}
   \end{itemize}
@@ -458,46 +461,45 @@ char x = 'x';               // the variable x has the value 'x'.
   \end{itemize}
   \begin{center}
     \begin{tabular}{cl}
-      \hline
-      flag & meaning \\
-      \hline
-      - & left justify \\
-      + & always display sign\\
-      0 & pad with leading zeros\\
-      \hline
+%      \hline
+      \rowcolor{lublue}flag & meaning \\
+%      \hline
+      \rowcolor{lulime}- & left justify \\
+      \rowcolor{lulime}+ & always display sign\\
+      \rowcolor{lulime}0 & pad with leading zeros\\
+%      \hline
     \end{tabular}
   \end{center}
   \begin{center}
-    \begin{tabular}{|c|c|c|}
-      \hline
-      Specifier & Output & Example\\
-      \hline
-      \%f & decimal float & 3.456 \\
-      \hline
-      \%7.5f & decimal float, 7 digit width and 5 digit precision & 3.45600 \\
-      \hline
-      \%d & integer & 5\\
-      \hline
-      \%05d & integer, 5 digits pad with zeros & 00101 \\
-      \hline
-      \%s & string of characters & "Hello World!"\\
-      \hline
-      \%e & scientific notation for decimal float & 2.71828e+5  \\
-      \hline
-      \%c & character &  \\
-      \hline
-      \textbackslash{}n & insert new line & \\
-      \hline
-      \textbackslash{}t & insert tab & \\
-      \hline
+    \begin{tabular}{ccc}
+%      \hline
+      \rowcolor{lublue}Specifier & Output & Example\\
+%      \hline
+      \rowcolor{lulime}\%f & decimal float & 3.456 \\
+%      \hline
+      \rowcolor{lulime!80}\%7.5f & decimal float, 7 digit width and 5 digit precision & 3.45600 \\
+%      \hline
+      \rowcolor{lulime}\%d & integer & 5\\
+%      \hline
+      \rowcolor{lulime!70}\%05d & integer, 5 digits pad with zeros & 00101 \\
+%      \hline
+      \rowcolor{lulime}\%s & string of characters & "Hello World!"\\
+%      \hline
+      \rowcolor{lulime!60}\%e & scientific notation for decimal float & 2.71828e+5  \\
+%      \hline
+      \rowcolor{lulime}\%c & character &  \\
+%      \hline
+      \rowcolor{lulime!50}\textbackslash{}n & insert new line & \\
+%      \hline
+      \rowcolor{lulime}\textbackslash{}t & insert tab & \\
+%      \hline
     \end{tabular}
   \end{center}
 \end{frame}
 
 \begin{frame}[fragile]{}
   \lstinputlisting[language=C]{./Example/print.c}
-
-  \begin{lstlisting}[language=C]
+  \begin{lstlisting}[style=LINUX]
 alexanders-mbp:Example apacheco$ gcc -o print print.c
 alexanders-mbp:Example apacheco$ ./print
 Characters: a A 
@@ -509,35 +511,69 @@ hello world
 \end{frame}
 
 \section{Programming Operators}
-\begin{frame}{Arithmetic Operators}
-  \begin{center}
-    \begin{tabular}{ab}
-      \hline
-      Operator & Meaning \\
-      \hline
-      +  & addition or unary plus \\
-      -  & subtraction or  unary minus \\
-      *  & multiplication \\
-      /  & division \\
-      \% & remainder after division( modulo division) \\
-      \hline
-    \end{tabular}
-    \newline
-    \begin{tabular}{abb}
-      \hline
-      \multicolumn{3}{c}{Other Arithmetic Operators} \\
-      \hline
-      Operator & Meaning & Same as \\
-      \hline
-      =   & a=b   & a=b \\
-      +=  & a+=b  & a=a+b \\
-      -=  & a-=b  & a=a-b \\
-      *=  & a*=b  & a=a*b \\
-      /=  & a/=b  & a=a/b \\
-      \%= & a\%=b & a=a\%b \\
-      \hline
-    \end{tabular}
-  \end{center}
+\begin{frame}{Operators}
+  \begin{itemize}
+    \item Arithmetic
+      \begin{center}
+        \begin{tabular}{ab}
+%          \hline
+          \rowcolor{lublue}Operator & Meaning \\
+%          \hline
+          +  & addition or unary plus \\
+          -  & subtraction or  unary minus \\
+          *  & multiplication \\
+          /  & division \\
+          \% & remainder after division( modulo division) \\
+          ++ & increase integer value by one \\
+          -- & decrease integer value by one \\
+%          \hline
+        \end{tabular}
+      \end{center}
+      \item Assignment Operator
+        \begin{center}
+          \begin{tabular}{abb}
+%            \hline
+            \rowcolor{lublue}Operator & Example & Same as \\
+%            \hline
+            =   & a=b   & a=b \\
+            +=  & a+=b  & a=a+b \\
+            -=  & a-=b  & a=a-b \\
+            *=  & a*=b  & a=a*b \\
+            /=  & a/=b  & a=a/b \\
+            \%= & a\%=b & a=a\%b \\
+%            \hline
+          \end{tabular}
+        \end{center}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{Increment/Decrement Operator}
+  \begin{itemize}
+    \item There are two types of increment/decrement operators
+    \begin{enumerate}
+      \item Suffix or Postfix: e.g. i++ or j{-}{-}
+      \item[] a=i++ means set a to i and then increment i by 1
+      \item Prefix: ++i or {-}{-}j
+      \item[] a=++i means increment i by 1 and then set a to i
+    \end{enumerate}
+    \item Consider the following example
+    \item[] If i = 1 and j = 2, then
+    \item[] ++i + j++ = 4
+    \item[] and not 5 since j is incremented after the operation is complete
+  \end{itemize}
+  \begin{columns}
+    \column{0.45\textwidth}
+    \lstinputlisting[basicstyle=\tiny\ttfamily]{./Example/increment.c}
+    \column{0.45\textwidth}
+    \begin{lstlisting}[style=LINUX]
+alexanders-mbp:Example apacheco$ make increment
+cc     increment.c   -o increment
+alexanders-mbp:Example apacheco$ ./increment
+++i + j++: 4
+a=++i: 2, b=j++: 2, i:2, j:3
+a(=++i) + b(=j++): 4
+    \end{lstlisting}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Relational Operators}
@@ -548,16 +584,16 @@ hello world
   \end{itemize}
   \begin{center}
     \begin{tabular}{abb}
-      \hline
-      Operator & Meaning & Example \\
-      \hline
-      =  & Equal to                 & 5==3 returns false (0) \\
+%      \hline
+      \rowcolor{lublue}Operator & Meaning & Example \\
+%      \hline
+      == & Equal to                 & 5==3 returns false (0) \\
       >  & Greater than             & 5>3 returns true (1) \\
       <  & Less than                & 5<3 returns false (0) \\
       != & Not equal to             & 5!=3 returns true(1) \\
       >= & Greater than or equal to & 5>=3 returns true (1) \\
       <= & Less than or equal to    & 5<=3 return false (0) \\
-      \hline
+%      \hline
     \end{tabular}
   \end{center}
 \end{frame}
@@ -569,26 +605,366 @@ hello world
   \end{itemize}
   \begin{center}
     \begin{tabular}{abb}
-      \hline
-      Operator & Meaning & Example \\
-      \hline
+%      \hline
+      \rowcolor{lublue}Operator & Meaning & Example \\
+%      \hline
       \&\& & Logial AND  & If c=5 and d=2 then,((c==5) \&\& (d>5)) returns false. \\
       ||   & Logical OR  & If c=5 and d=2 then, ((c==5) || (d>5)) returns true. \\
       !    & Logical NOT & If c=5 then, !(c==5) returns false. \\
-      \hline
+%      \hline
     \end{tabular}
   \end{center}
   \begin{itemize}
   \item Conditional Operator: Conditional operators are used in decision making in C programming, i.e, executes different statements according to test condition whether it is either true or false.
   \item[] \lstinline|conditional_expression?expression1:expression2|
   \item If the test condition is true, expression1 is returned and if false expression2 is returned.
+  \item[] \lstinline|d=(c>0)?10:-10;|
+  \item[] If c is greater than 0, value of d will be 10 but, if c is less than 0, value of d will be -10.
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Other Operators}
+\end{frame}
 
-\section{Control Structures: for, if \& switch}
-\begin{frame}{Title}
+\begin{frame}[fragile]{Operator Precedance}
+  \scriptsize{
+    \begin{center}
+      \begin{tabular}{ccc}
+        \hline
+        \rowcolor{lublue}Operator & Description & Associativity \\
+        \rowcolor{lulime!60}++, {-}{-} & Suffix Increment/Decrement & $\rightarrow$ \\
+        \rowcolor{lulime}++, {-}{-} & Prefix Increment/Decrement & $\leftarrow$ \\
+        \rowcolor{lulime!60}+, - & Unary plus and minus &  \\
+        \rowcolor{lulime}!, \Verb|~| & Logical NOT and Bitwise NOT & \\
+        \rowcolor{lulime!60}* & Indirection (dereference) & \\
+        \rowcolor{lulime}\& & Address of & \\
+        \rowcolor{lulime!60}sizeof & Size-of & \\
+        \rowcolor{lulime}{*, /, \%} & Multiplication, division, modulo & $\rightarrow$ \\
+        \rowcolor{lulime!60}{+, -} & Addition, Subtraction & \\
+        \rowcolor{lulime}{<<, >>} & Bitwise left and right shift & \\
+        \rowcolor{lulime!60}{<, <=} & Relational Operators & \\ 
+        \rowcolor{lulime}{>, >= } &  & \\ 
+        \rowcolor{lulime!60}{==, !=} &  & \\ 
+        \rowcolor{lulime}{\&} & Bitwise AND & \\
+        \rowcolor{lulime!60}{\Verb|^|} & Bitwise XOR & \\
+        \rowcolor{lulime}{|} & Bitwise OR & \\
+        \rowcolor{lulime!60}{\&\&} & Logical AND & \\
+        \rowcolor{lulime}{||} & Logical OR & \\
+        \rowcolor{lulime!60}{?:} & Ternary Conditional & $\leftarrow$ \\
+        \rowcolor{lulime}{=} & Simple Assignment &  \\
+        \rowcolor{lulime!60}{+=, -=} & Assignment by sum and difference & \\
+        \rowcolor{lulime}{*=, /=, \%=} & Assignment by product, quotient and remainder & \\
+        \rowcolor{lulime!60}{<<=, >>=} & Assignment by bitwise left and right shift & \\
+        \rowcolor{lulime}{\&=, \Verb|^=|, |=} & Assignment by logical AND, XOR and OR & \\
+        \rowcolor{lulime!60}{,} & Comma Operator & $\rightarrow$ \\
+        \hline
+      \end{tabular}
+    \end{center}
+  }
+\end{frame}
 
+\section{Control Flow}
+\begin{frame}{Control Flow}
+  \begin{itemize}
+    \item Conditional Statements (decision making/selection)
+    \begin{itemize}
+      \item if $\cdots$ else if $\cdots$ else
+      \item switch
+    \end{itemize}
+    \item Loops
+    \begin{itemize}
+      \item for
+      \item while
+      \item do while
+    \end{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{if statement}
+  \begin{itemize}
+    \item An if statement consists of a boolean expression followed by one or more statements.
+      \begin{block}{}
+        \begin{lstlisting}
+if(boolean_expression)
+{
+   /* statement(s) will execute if the boolean expression is true */
+}
+        \end{lstlisting}
+      \end{block}
+    \item If the boolean expression evaluates to true, then the block of code inside the if statement will be executed. 
+    \item If boolean expression evaluates to false, then the first set of code after the end of the if statement(after the closing curly brace) will be executed.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{if $\cdots$ else statement}
+  \begin{itemize}
+    \item An if statement can be followed by an optional else statement, which executes when the boolean expression is false.
+      \begin{block}{}
+        \begin{lstlisting}
+if(boolean_expression)
+{
+   /* statement(s) will execute if the boolean expression is true */
+}
+else
+{
+  /* statement(s) will execute if the boolean expression is false */
+}
+        \end{lstlisting}
+      \end{block}
+    \item If the boolean expression evaluates to true, then the if block of code will be executed, otherwise else block of code will be executed.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{if $\cdots$ else if $\cdots$ else statement}
+  \begin{itemize}
+    \item An if statement can be followed by an optional else if$\cdots$else statement,
+    \item very useful to test various conditions using single if$\cdots$else if statement.
+    \item When using if , else if , else statements there are few points to keep in mind:
+    \begin{itemize}
+      \item An if can have zero or one else's and it must come after any else if's.
+      \item An if can have zero to many else if's and they must come before the else.
+      \item Once an else if succeeds, none of the remaining else if's or else's will be tested.
+    \end{itemize}
+      \begin{block}{}
+        \begin{lstlisting}[basicstyle=\scriptsize\ttfamily]
+if(boolean_expression 1)
+{
+   /* Executes when the boolean expression 1 is true */
+}
+else if( boolean_expression 2)
+{
+   /* Executes when the boolean expression 2 is true */
+}
+else if( boolean_expression 3)
+{
+   /* Executes when the boolean expression 3 is true */
+}
+else 
+{
+   /* executes when the none of the above condition is true */
+}
+        \end{lstlisting}
+      \end{block}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{}
+  \lstinputlisting[language=C]{./Example/ifelseif.c}
+\end{frame}
+
+\begin{frame}[fragile]{Nested if$\cdots$else statement}
+  \begin{itemize}
+    \item You can use one if or else if statement inside another if or else if statement(s) i.e. nested if$\cdots$else statement/s
+      \begin{block}{}
+        \begin{lstlisting}
+if( boolean_expression 1)
+{
+   /* Executes when the boolean expression 1 is true */
+   if(boolean_expression 2)
+   {
+      /* Executes when the boolean expression 2 is true */
+   }
+}
+        \end{lstlisting}
+      \end{block}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{}
+  \lstinputlisting[language=C]{./Example/nestedif.c}
+\end{frame}
+
+\begin{frame}[fragile]{switch statement}
+  \begin{itemize}
+    \item A switch statement allows a variable to be tested for equality against a list of values. 
+    \item Each value is called a case, and the variable being switched on is checked for each switch case.
+      \begin{block}{}
+        \begin{lstlisting}
+switch(expression){
+    case constant-expression  :
+       statement(s);
+       break; /* optional */
+    case constant-expression  :
+       statement(s);
+       break; /* optional */
+  
+    /* you can have any number of case statements */
+    default : /* Optional */
+       statement(s);
+}
+        \end{lstlisting}
+      \end{block}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile,allowframebreaks]
+  \begin{itemize}
+    \item The expression used in a switch statement must have an integral type 
+    \item[](or enumerated type, or be of a class type in which the class has a single conversion function to an integral or enumerated type).
+    \item You can have any number of case statements within a switch. Each case is followed by the value to be compared to and a colon.
+    \item The constant-expression for a case must be the same data type as the variable in the switch, and it must be a constant or a literal.
+    \item When the variable being switched on is equal to a case, the statements following that case will execute until a break statement is reached.
+    \item When a break statement is reached, the switch terminates, and the flow of control jumps to the next line following the switch statement.
+    \item Not every case needs to contain a break. If no break appears, the flow of control will fall through to subsequent cases until a break is reached.
+    \item A switch statement can have an optional default case, which must appear at the end of the switch. 
+    \item The default case can be used for performing a task when none of the cases is true. No break is needed in the default case.
+  \end{itemize}
+  \lstinputlisting[language=C,basicstyle=\fontsize{5}{6}\selectfont\ttfamily]{./Example/switch.c}
+\end{frame}
+
+\begin{frame}[fragile]{Nested Conditional Statements}
+  \begin{itemize}
+    \item Conditional statements can be nested as they do not overlap:
+  \end{itemize}
+  \begin{lstlisting}
+if( boolean_expression 1) {
+  if(boolean_expression 2) {
+    /* Executes when the boolean expression 2 is true */
+    /* nested switch statement */
+    switch(expression){
+    case constant-expression :
+      statement(s);
+      break; /* optional */
+    case constant-expression :
+      statement(s);
+      break; /* optional */
+      /* you can have any number of case statements */
+    default : /* Optional */
+      statement(s);
+    }
+  }
+ }
+  \end{lstlisting}
+\end{frame}
+
+\begin{frame}[fragile]{for loop}
+  \begin{itemize}
+    \item A for loop is a repetition control structure that allows you to efficiently write a loop that needs to execute a specific number of times.
+      \begin{itemize}
+        \item The init step is executed first and only once.
+        \item the condition is evaluated. If it is true, the body of the loop is executed. If it is false, the body of the loop does not execute, the loop exits.
+        \item the increment statement executes after the loop body.
+        \item The loop continues until the condition becomes false
+      \end{itemize}
+  \end{itemize}
+  \begin{block}{}
+    \begin{lstlisting}
+for ( init; condition; increment )
+{
+   statement(s);
+}
+    \end{lstlisting}
+  \end{block}
+\end{frame}
+
+\begin{frame}[fragile]{while and do$\cdots$while loops}
+  \begin{itemize}
+    \item while loops are similar to for loops
+    \item A while loop continues executing the code block as long as the condition in the while holds.
+      \begin{block}{}
+        \begin{lstlisting}
+while(condition)
+{
+   statement(s);
+}
+        \end{lstlisting}
+      \end{block}
+    \item do$\cdots$while loop is guaranteed to execute at least one time.
+      \begin{block}{}
+        \begin{lstlisting}
+do
+{
+   statement(s);
+
+}while( condition );
+        \end{lstlisting}
+      \end{block}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{Simple loops using for, while, do while}
+  \lstinputlisting[language=C]{./Example/loops.c}
+\end{frame}
+
+\begin{frame}[fragile]{Nested loops in C}
+  \begin{itemize}
+    \item All loops can be nested as long as they do not overlap
+  \end{itemize}
+  \begin{columns}
+    \column{0.45\textwidth}
+    \begin{block}{}
+      \begin{lstlisting}[basicstyle=\scriptsize\ttfamily]
+/* nested for loops*/
+for (init; condition; increment) {
+  for (init; condition; increment) {
+    statement(s);
+  }
+  statement(s);
+ }
+/* nested while loops*/
+while (condition) {
+  while (condition) {
+    statement(s);
+  }
+  statement(s);
+ }
+      \end{lstlisting}
+    \end{block}
+    \column{0.45\textwidth}
+    \begin{block}{}
+      \begin{lstlisting}[basicstyle=\scriptsize\ttfamily]
+/* nested do while loops*/
+do {
+  statement(s);
+  do {
+    statement(s);
+  } while ( condition );
+ } while ( condition );
+/* mixed type loops*/
+while (condition) {
+  for (init; condition; increment) {
+    statement(s);
+    do {
+      statement(s);
+    } while ( condition );
+  }
+  statement(s);
+ }
+      \end{lstlisting}
+    \end{block}
+  \end{columns}
+\end{frame}
+
+\begin{frame}[fragile]
+  \begin{block}{}
+    \lstinputlisting[basicstyle=\scriptsize\ttfamily]{./Example/nestedfor.c}
+  \end{block}
+\end{frame}
+
+\begin{frame}[fragile]{Loop Control Statement}
+  \begin{itemize}
+    \item Loop control statements change execution from its normal sequence.
+      \begin{description}
+        \item[break:] Terminates the loop or switch statement
+        \item[continue:] Causes the loop to skip the remainder of its body for the current iteration
+        \item[goto:] Transfers control to the labeled statement. Use is not advised
+      \end{description}
+  \end{itemize}
+  \begin{columns}
+    \column{0.45\textwidth}
+    \lstinputlisting[basicstyle=\fontsize{5}{6}\selectfont\ttfamily]{./Example/break.c}
+    \column{0.45\textwidth}
+    \lstinputlisting[basicstyle=\fontsize{5}{6}\selectfont\ttfamily]{./Example/continue.c}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Exercise}
+  \begin{enumerate}
+    \item Print list of prime numbers less than 100
+    \item Calculate circumference and area of a circle for given radius
+    \item Obtain roots of a quadratic equations
+    \item Calculate factorial of a number
+  \end{enumerate}
 \end{frame}
 
 \end{document}
