Added section on Functions

--- a/CProg1.tex
+++ b/CProg1.tex
@@ -19,7 +19,7 @@
        
 \institute{\href{http://researchcomputing.lehigh.edu}{LTS Research Computing}}
 
-\date{\today}
+\date{June 3, 2015}
      
 \subject{Talks}
 \keywords{Lehigh Research Computing Resources, C Programming}
